# pathlint

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  pr-title-check.yml  release.yml
docs/: PRD.jp.md  PRD.md  README.jp.md  RELEASE.jp.md  RELEASE.md
plugins/: _index.toml  apt.toml  aqua.toml  asdf.toml  brew.toml  cargo.toml  choco.toml  dnf.toml  flatpak.toml  go.toml  macports.toml  mingw.toml  mise.toml  npm.toml  pacman.toml  perl.toml  pip.toml  scoop.toml  snap.toml  system.toml  termux.toml  user-binaries.toml  volta.toml  windows-apps.toml  winget.toml
scripts/: release-check.sh
src/: catalog.rs  catalog_view.rs  cli.rs  config.rs  doctor.rs  embedded_catalog.toml  expand.rs  format.rs  init.rs  lib.rs  lint.rs  main.rs  os_detect.rs  path_source.rs  report.rs  resolve.rs  run.rs  sort.rs  source_match.rs  where_cmd.rs
tests/: catalog.rs  check.rs  doctor.rs  init.rs  security.rs  sort.rs  where_cmd.rs
