[package]
name = "pathlint"
version = "0.0.9"
edition = "2024"
rust-version = "1.85"
authors = ["ShortArrow <bamboogeneral@shortarrow.jp>"]
description = "Lint the PATH environment variable against declarative ordering rules."
readme = "README.md"
homepage = "https://github.com/ShortArrow/pathlint"
repository = "https://github.com/ShortArrow/pathlint"
documentation = "https://docs.rs/pathlint"
license = "MIT OR Apache-2.0"
keywords = ["path", "lint", "shell", "cli", "doctor"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  "/.github/",
  "/docs/",
  "/tests/fixtures/",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
